deployment/istio/_grpc-gateway.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    name: gweather-http-gateway
    # namespace: demo
  spec:
    selector:
      istio: ingressgateway
    servers:
    - port:
        number: 80
        name: grpc
        protocol: GRPC
      hosts:
      - "*"
