deployment/istio/_grpc-virtualservice.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: gweather-http-route
    # namespace: demo
  spec:
    hosts:
    - "*"
    gateways:
    - gweather-http-gateway
    http:
    - match:
      - uri:
          regex: "^/weather.*"
      route:
      - destination:
          host: gweather-server.demo.svc.cluster.local
          port:
            number: 9000
