deployment/istio/getsomeurl-virtaulservice.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: getsomeurl-route
    # namespace: demo
  spec:
    hosts:
    - "*"
    gateways:
    - istio-gateway
    http:
    - match:
      - uri:
          exact: /gettime
      route:
      - destination:
          host: frontend.demo.svc.cluster.local
          port:
            number: 80
