deployment/istio/time-egress.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: ServiceEntry
  metadata:
    name: weather-external-resources
    # namespace: demo
  spec:
    hosts:
    - time.jsontest.com
    ports:
    - number: 80
      name: http
      protocol: HTTP
