deployment/istio/weather-virtaulservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gweather-route
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - gweather-gateway
  http:
  - match:
    - uri:
        exact: /weather
    route:
    - destination:
        # name: gweather-ui.demo.svc.cluster.local
        host: gweather-ui.demo.svc.cluster.local
        port:
          number: 5000
